--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext{
+    supportVersion = '27.1.0'
+}
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
